2003-07-22  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-bin.c, cong-editor-area-composer.c, cong-editor-area-span-tag.c, cong-editor-area-structural-tag.c, cong-editor-area-text.c, cong-editor-area-text.h, cong-editor-area-unknown-tag.c, cong-editor-area.c, cong-editor-area.h, cong-editor-node-text.c, cong-editor-node-unimplemented.c, cong-editor-node.h, cong-editor-widget3.c, cong-marshal.c, cong-marshal.h, global.h

	Support for clicking, dragging selections; editor nodes now know about their parents; text nodes can be coloured; 

	* cong-text-cache.c, cong-text-cache.h, Makefile.am

	New files, for caching the results of stripping surplus whitespace from a string.

2003-07-18  Geert Stappers <Geert.Stappers@xs4all.nl>

	* cong-editor-node-text.c
	Removed NULL paramater when calling function `cong_editor_area_text_new'
	in function `generate_area'.
	
2003-07-18  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-eel.c, cong-eel.h

	Added some debug code to help track down reference leaks
	
	* cong-editor-node-text.c

	Fixed a bug: was failing to clean up signals

	* tree.c, xmldata.c

	Found and patched a problem with cong_node_recursive_dup not setting document on new nodes.

	* cong-editor-area-bin.c, cong-editor-area-composer.c, cong-editor-area-composer.h, cong-editor-area-container.c, cong-editor-area-container.h, cong-editor-widget3.c

	Container areas now have an add_after method
	
	* cong-debug-log-view.c

	Made the signal callbacks static

2003-07-18  Geert Stappers <Geert.Stappers@xs4all.nl>

	* cong-editor-area-span-tag.c

	Moved the line
	g_assert (PRIVATE(span_tag)->span_vcompose);
	down to avoid a C99 issue

2003-07-17  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-bin.c, cong-editor-area-composer.c, cong-editor-area-container.c, cong-editor-area-container.h, cong-editor-area.c, cong-editor-widget3.c

	Track tree modifications to the document in the editor widget.
	
	* cong-document.c
